--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
-  "framework": "nextjs",
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "build": {
-    "env": {
-      "NEXT_TELEMETRY_DISABLED": "1"
-    }
-  },
   "cleanUrls": true,
   "trailingSlash": false
 }
