--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
+  "buildCommand": "next build",
+  "outputDirectory": ".next",
   "headers": [
     {
       "source": "/(.*)",
